--- a/css/product.css
+++ b/css/product.css
@@ -105,7 +105,7 @@ div.main_menu_all{display:none;}
 .product_bottom>ul.rp span{display:block;width:150px;height:130px;font-size:0.8em;margin:0 auto;}
 .product_bottom>ul.rp li:first-of-type span{background:url(../img/rp_01.jpg)no-repeat center/cover;}
 .product_bottom>ul.rp li:nth-of-type(2) span{background:url(../img/product_img_01.png)no-repeat center/cover;}
-.product_bottom>ul.rp li:nth-of-type(3) span{background:url(../img/rp_03.jpg)no-repeat center/cover;}
+.product_bottom>ul.rp li:nth-of-type(3) span{background:url(../img/rp_03.JPG)no-repeat center/cover;}
 .product_bottom>ul.rp li:last-of-type span{background:url(../img/rp_04.jpg)no-repeat center/cover;}
 
 .product_bottom>ul.rp dl dt{font-size:15px;padding-top:5px;white-space:normal;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;text-overflow:ellipsis;}
