--- a/css/product.css
+++ b/css/product.css
@@ -222,7 +222,7 @@ header {position:relative;clear:both;width:100%;height:100px;padding:0 2%;margin
 .product_bottom>ul.rp span{display:block;width:200px;height:180px;font-size:0.8em;margin:0 auto;background:orange;}
 .product_bottom>ul.rp li:first-of-type span{background:url(../img/rp_01.jpg)no-repeat center/cover;}
 .product_bottom>ul.rp li:nth-of-type(2) span{background:url(../img/product_img_01.png)no-repeat center/cover;}
-.product_bottom>ul.rp li:nth-of-type(3) span{background:url(../img/rp_03.jpg)no-repeat center/cover;}
+.product_bottom>ul.rp li:nth-of-type(3) span{background:url(../img/rp_03.JPG)no-repeat center/cover;}
 .product_bottom>ul.rp li:last-of-type span{background:url(../img/rp_04.jpg)no-repeat center/cover;}
 
 .product_bottom>ul.rp dl dt{height:40px;font-size:17px;padding-top:5px;}
